2007-07-23  Stefan Kost  <ensonic@users.sf.net>

	* configure.ac:
	  Sync liboil check with plugins-base.

2007-07-20  Stefan Kost  <ensonic@users.sf.net>

	* gst/equalizer/gstiirequalizer.c:
	(gst_iir_equalizer_band_set_property),
	(gst_iir_equalizer_child_proxy_get_child_by_index),
	(gst_iir_equalizer_child_proxy_get_children_count),
	(gst_iir_equalizer_child_proxy_interface_init),
	(gst_iir_equalizer_class_init), (arg_to_scale), (setup_filter),
	(gst_iir_equalizer_compute_frequencies):
	* gst/equalizer/gstiirequalizer10bands.c:
	(gst_iir_equalizer_10bands_class_init):
	* gst/equalizer/gstiirequalizer3bands.c:
	(gst_iir_equalizer_3bands_class_init):
	* gst/equalizer/gstiirequalizernbands.c:
	  Better algorith for the center frequencies. Subtract band filters from
	  input for negative gains. Rework the gain mapping.

2007-07-20  Stefan Kost  <ensonic@users.sf.net>

	* ext/dirac/Makefile.am:
	  Also include stdlib here.

2007-07-19  Jan Schmidt  <thaytan@noraisin.net>

	* tests/check/elements/.cvsignore:
	Fix the buildbot with the cvsignore it wants.

2007-07-19  Julien MOUTTE  <julien@moutte.net>

	* configure.ac:
	* gst/flv/Makefile.am:
	* gst/flv/gstflvdemux.c: (gst_flv_demux_flush),
	(gst_flv_demux_cleanup), (gst_flv_demux_chain),
	(gst_flv_demux_pull_tag), (gst_flv_demux_pull_header),
	(gst_flv_demux_seek_to_prev_keyframe), (gst_flv_demux_loop),
	(gst_flv_demux_sink_activate), (gst_flv_demux_sink_activate_push),
	(gst_flv_demux_sink_activate_pull), (gst_flv_demux_sink_event),
	(gst_flv_demux_change_state), (gst_flv_demux_dispose),
	(gst_flv_demux_base_init), (gst_flv_demux_class_init),
	(gst_flv_demux_init), (plugin_init):
	* gst/flv/gstflvdemux.h:
	* gst/flv/gstflvparse.c: (FLV_GET_BEUI24), (FLV_GET_STRING),
	(gst_flv_demux_query_types), (gst_flv_demux_query),
	(gst_flv_parse_metadata_item), (gst_flv_parse_tag_script),
	(gst_flv_parse_tag_audio), (gst_flv_parse_tag_video),
	(gst_flv_parse_tag_type), (gst_flv_parse_header):