@@ -46,7 +46,7 @@ AM_PROG_LIBTOOL
 dnl *** required versions of GStreamer stuff ***
 dnl *** remove rtpmanager/equalizer stuff below when this is updated
 GST_REQ=0.10.13
-GSTPB_REQ=0.10.13
+GSTPB_REQ=0.10.13.1
 
 dnl *** autotools stuff ****
 
